@@ -215,9 +215,6 @@ AC_SUBST(TK_SHARED_BUILD)
 AC_SUBST(CYGPATH)
 AC_SUBST(DEPARG)
 AC_SUBST(CFLAGS_DEFAULT)
-AC_SUBST(CFLAGS_DEBUG)
-AC_SUBST(CFLAGS_OPTIMIZE)
-AC_SUBST(CFLAGS_WARNING)
 AC_SUBST(EXTRA_CFLAGS)
 AC_SUBST(STLIB_LD)
 AC_SUBST(SHLIB_LD)
